--- a/module1/1.4/index.html
+++ b/module1/1.4/index.html
@@ -20,6 +20,14 @@ style="display: inline-block; min-width: 50px; min-height: 50px; border:1px soli
   class="blue"
   style="display: inline-block; min-width: 50px; min-height: 50px; border:1px solid black"
 ></div>
+<div
+  class="lightblue"
+  style="display: inline-block; min-width: 50px; min-height: 50px; border:1px solid black"
+></div>
+<div
+  class="black"
+  style="display: inline-block; min-width: 50px; min-height: 50px; border:1px solid black"
+></div>
     <script src="index.js"></script>
 </body>
 </html>
