--- a/module1/1.5/index.html
+++ b/module1/1.5/index.html
@@ -20,7 +20,7 @@ max-height:16px;">
 max-height:16px;" >
 </div>
 
-<img class="pixel" src="./pixel-heart-2779422_1280.pnj" alt="" style="max-width:16px; max-height:16px; position: absolute;">
+<img class="pixel" src="./target.png" alt="" style="max-width:16px; max-height:16px; position: absolute;">
 <script src="index.js"></script>
 </body>
 </html>
